# XueHua

./: .gitignore  pyproject.toml  requirements.txt
xuehua/: __init__.py  __main__.py  api.py  app.py  cli.py
xuehua/core/: __init__.py  annotation.py  config.py  constants.py  errors.py  i18n.py  japanese.py  kb_builder.py  languages.py  learning.py  ollama_client.py  photo_learn.py  vector_db.py  vocab_networks.py
xuehua/learning/: __init__.py
xuehua/static/css/: photo.css  style.css
xuehua/static/js/: app.js  chat.js  i18n.js  learn.js  photo.js  review.js
xuehua/templates/: chat.html  index.html  learn.html  photo.html  review.html
