[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xuehua"
dynamic = ["version"]
description = "Language learning assistant with EPUB knowledge base and Ollama LLM"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Xuehua Contributors" },
]
keywords = ["language-learning", "japanese", "epub", "ollama", "chromadb", "rag", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.31",
    "chromadb>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "numpy>=1.24",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "ebooklib>=0.18",
    "fugashi>=1.3",
    "unidic-lite>=1.0",
    "jaconv>=0.3",
    "pypinyin>=0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
xuehua = "xuehua.cli:main"

[project.urls]
Homepage = "https://github.com/user/xuehua"
Repository = "https://github.com/user/xuehua"

[tool.setuptools.dynamic]
version = { attr = "xuehua.__version__" }

[tool.setuptools.packages.find]
include = ["xuehua*"]

[tool.setuptools.package-data]
xuehua = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]